--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glutin = "0.24"
-gl = "0.14"
+vek = "0.15.8"
+log = "0.4.17"
+env_logger = "0.9.0"
+glow = "0.11.2"
+glutin = "0.29.1"
